updated several components

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -41,7 +41,7 @@
   flex-direction: column;
   outline: none;
   width: 100%;
-  background-color: lightseagreen;
+  background-color: rgb(151, 178, 32);
 
   .mat-list-item.active {
     background-color: yellowgreen;
