--- a/src/app/pages/track-and-trace/track-and-trace.component.html
+++ b/src/app/pages/track-and-trace/track-and-trace.component.html
@@ -2,3 +2,34 @@
 <div class="bold">
 
 </div>
+
+<mat-card>
+    <mat-card-header>
+      List of Entries
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries Under Exam
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries with PGA Hold
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries Past Arrival Dates
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Duty Payments Due
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Liquidated Entries
+    </mat-card-header>
+  </mat-card>  
