--- a/src/app/pages/trucking/air/air.component.html
+++ b/src/app/pages/trucking/air/air.component.html
@@ -1,1 +1,8 @@
-<p>air works!</p>
+<h1>Air Trucking</h1>
+
+<mat-card>This Month</mat-card>
+<mat-card>Up to Today's Date</mat-card>
+<mat-card>Last Year Same Month</mat-card>
+<mat-card>Last Year</mat-card>
+<mat-card>Today Delivery</mat-card>
+<mat-card>Future Deliveries</mat-card>
