--- a/src/app/pages/trucking/trucking.component.html
+++ b/src/app/pages/trucking/trucking.component.html
@@ -4,4 +4,37 @@
   <a routerLink="lcl" routerLinkActive="active">LCL Delivery</a>
   <a routerLink="fcl" routerLinkActive="active">FCL Delivery</a>
 </nav>
+
+<mat-card>
+  <mat-card-header>
+    List of Entries
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Under Exam
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries with PGA Hold
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Past Arrival Dates
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Duty Payments Due
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Liquidated Entries
+  </mat-card-header>
+</mat-card>  
+<h1>Added a child component below:</h1>
+<app-air></app-air>
 <router-outlet></router-outlet>
