--- a/src/app/pages/air-import/air-import.component.scss
+++ b/src/app/pages/air-import/air-import.component.scss
@@ -9,3 +9,26 @@
   border-style: solid;
   border-color: red;
 }
+
+#air {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#air td, #air th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#air tr:nth-child(even){background-color: #f2f2f2;}
+
+#air tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
