--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -1,7 +1,38 @@
 <h1 style="max-width: 100%; max-height: 100%">Ocean Import Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
+  <mat-tab label="First">
+    <mat-card>
+      <mat-card-header>
+        List of Entries
+      </mat-card-header>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        Entries Under Exam
+      </mat-card-header>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        Entries with PGA Hold
+      </mat-card-header>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        Entries Past Arrival Dates
+      </mat-card-header>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        Duty Payments Due
+      </mat-card-header>
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        Liquidated Entries
+      </mat-card-header>
+    </mat-card>  
+  </mat-tab>
   <mat-tab label="Second">Content 2</mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group>
