--- a/src/app/pages/sea-ams/sea-ams.component.html
+++ b/src/app/pages/sea-ams/sea-ams.component.html
@@ -7,4 +7,35 @@
   <a routerLink="pnlbySalesman" routerLinkActive="active">Profit and Loss by Salesman</a>
   <a routerLink="pnlbyCustomer" routerLinkActive="active">Profit and Loss by Customer</a>
 </nav>
+
+<mat-card>
+  <mat-card-header>
+    List of Entries
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Under Exam
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries with PGA Hold
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Past Arrival Dates
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Duty Payments Due
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Liquidated Entries
+  </mat-card-header>
+</mat-card>  
 <router-outlet></router-outlet>
