--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -13,4 +13,35 @@
   <a routerLink="vessel" routerLinkActive="active">Vessel Codes</a>
   <a routerLink="products" routerLinkActive="active">Product Codes</a>
 </nav>
+
+<mat-card>
+  <mat-card-header>
+    List of Entries
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Under Exam
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries with PGA Hold
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Entries Past Arrival Dates
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Duty Payments Due
+  </mat-card-header>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    Liquidated Entries
+  </mat-card-header>
+</mat-card>  
 <router-outlet></router-outlet>
