--- a/src/app/pages/truck-ams/truck-ams.component.html
+++ b/src/app/pages/truck-ams/truck-ams.component.html
@@ -1,3 +1,34 @@
 
 <p>truck-ams works!
 </p>
+
+<mat-card>
+    <mat-card-header>
+      List of Entries
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries Under Exam
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries with PGA Hold
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Entries Past Arrival Dates
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Duty Payments Due
+    </mat-card-header>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      Liquidated Entries
+    </mat-card-header>
+  </mat-card>  
