--- a/src/app/pages/cmsq/cmsq.component.html
+++ b/src/app/pages/cmsq/cmsq.component.html
@@ -33,8 +33,14 @@
       </mat-card-header>
     </mat-card>  
   </mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+
+  <mat-tab label="Second">
+    <app-grid01></app-grid01> 
+  </mat-tab>
+
+  <mat-tab label="Third">
+    <app-grid01></app-grid01>
+  </mat-tab>
 </mat-tab-group>
 
 
