--- a/src/app/pages/isf/hts/hts.component.html
+++ b/src/app/pages/isf/hts/hts.component.html
@@ -1,1 +1,14 @@
-<p>hts works!</p>
+<table class="example-full-width" cellspacing="0">
+  <tr>
+  <td><mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>HTS #</mat-label>
+    <input matInput>
+  </mat-form-field></td>
+  </tr>
+  <tr>
+  <td><mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Description</mat-label>
+    <input matInput>
+  </mat-form-field></td>
+  </tr></table>
+
