--- a/src/app/layouts/layout.component.html
+++ b/src/app/layouts/layout.component.html
@@ -1,6 +1,6 @@
-<!-- vertical layout -->
-<app-vertical *ngIf="isVerticalLayoutRequested()"></app-vertical>
+<!-- vertical layout
+<app-vertical *ngIf="isVerticalLayoutRequested()"></app-vertical> -->
 
 
 <!-- horizontal layout -->
-<app-horizontal *ngIf="isHorizontalLayoutRequested()"></app-horizontal>
+<!-- <app-horizontal *ngIf="isHorizontalLayoutRequested()"></app-horizontal> -->
