--- a/src/app/pages/air-ams/ams-summary/ams-summary.component.html
+++ b/src/app/pages/air-ams/ams-summary/ams-summary.component.html
@@ -2,43 +2,91 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
-  
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
-  
+
       <!-- ID Column -->
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
-  
+
       <!-- Progress Column -->
       <ng-container matColumnDef="progress">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
         <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
-  
+
       <!-- Fruit Column -->
       <ng-container matColumnDef="fruit">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
         <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
       </ng-container>
-  
+
+
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+
+      <!-- In Stock Column -->
+      <ng-container matColumnDef="in-stock">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> In Stock </th>
+        <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+      </ng-container>
+
+      <!-- Store Column -->
+      <ng-container matColumnDef="store">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> In Store At </th>
+        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-  
+
     <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
-  
+
+  <mat-divider></mat-divider>
+
+  <div fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="33">
+        <mat-card-title>Add New</mat-card-title>
+        <mat-card-content></mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color='primary'>Add New</button>
+        </mat-card-actions>
+      </mat-card>
+      <br>
+
+      <mat-card fxFlex="33">
+        <mat-card-title>From Template</mat-card-title>
+        <mat-card-content></mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color='accent'>From Template</button>
+        </mat-card-actions>
+      </mat-card>
+
+      <mat-card fxFlex="33">
+        <mat-card-title>Consolidator</mat-card-title>
+        <mat-card-content></mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color='warn'>Other Parties</button>
+        </mat-card-actions>
+      </mat-card>
+      <br>
+</div>
