--- a/src/app/account/auth/login02/login02.component.scss
+++ b/src/app/account/auth/login02/login02.component.scss
@@ -36,13 +36,14 @@ body {
   float: left;
   padding: 60px 50px 40px 50px;
   width: 100%;
-  background: #fff;
+  background: rgb(240, 210, 210);
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   z-index: 2;
   max-width: 400px;
+  border: 2px double blue;
 }
 
 .box.back {
@@ -97,7 +98,7 @@ body {
 }
 
 .login-wrapper .mat-stroked-button {
-  border: 1px solid currentColor;
+  border: 2px double blue;
   line-height: 54px;
   background: #FFF7FA;
 }
