--- a/src/app/extrapages/comingsoon/comingsoon.component.html
+++ b/src/app/extrapages/comingsoon/comingsoon.component.html
@@ -14,7 +14,7 @@
                   <div class="row justify-content-center mt-5">
                       <div class="col-sm-4">
                           <div class="maintenance-img">
-                              <img src="assets/images/coming-soon.svg" alt="" class="img-fluid mx-auto d-block">
+                              <img src="assets/images/YellowStone01.jpg" alt="" class="img-fluid mx-auto d-block">
                           </div>
                       </div>
                   </div>
