--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -30,7 +30,7 @@
               <input matInput formControlName="password" class="form-control" placeholder="Password">
             </mat-form-field>
           </mat-card-content>
-          <a routerLink="/extra-pages/coming-soon"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a>
+          <a routerLink="/home1/nav"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a>
         </form>
       </mat-card>
 
