--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -34,7 +34,7 @@
 
   </mat-sidenav>
   <mat-sidenav-content>
-    <router-outlet *ngIf='isLoggedIn'></router-outlet>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
