--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -15,7 +15,7 @@
   }
 
   a:visited {
-    color: green
+    color: rgba(243, 103, 10, 0.863)
   }
 
 }
@@ -67,6 +67,7 @@
 h1 {
   margin: auto;
   font-weight: bolder;
+  text-shadow: 0 0 3px #FF0000;
 }
 
 .a {
