--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -22,12 +22,12 @@
           <mat-card-content>
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Username</mat-label>
-              <input matInput formControllName="username" class="form-control" placeholder="Username">
+              <input matInput id="username" type="text" formControlName="username" placeholder="Username">
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Password</mat-label>
-              <input matInput formControlName="password" class="form-control" placeholder="Password">
+              <input matInput id="password" type="password" formControlName="password"  placeholder="Password">
             </mat-form-field>
           </mat-card-content>
           <a routerLink="/home/nav"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a>
