--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -1,16 +1,15 @@
 <h1>ANA Link, Ltd</h1>
 
 <mat-toolbar color="primary">
-  <h3>Menu</h3>
   <button
-    type="button"
+    mat-icon-button
     aria-label="Toggle sidenav"
     mat-icon-button
-    (click)="drawer.toggle()"
-    *ngIf="isHandset$ | async">
-    <mat-icon aria-label="Side nav toggle icon" >menu</mat-icon>
+    (click)="drawer.toggle()">
+    <!-- *ngIf="isHandset$ | async"> -->
+    <mat-icon>menu</mat-icon>
   </button>
-  <span>angularAdmin-first</span>
+  <span>ANA Link, Ltd</span>
 
   <span class="toolbar-filler"></span>
   <a routerLink="/"><button id="button-logout" md-button>Log Out</button> </a>
