--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -33,7 +33,9 @@
       </mat-card-header>
     </mat-card>  
   </mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="New Ocean Export">
+    <app-ocean-export-detail></app-ocean-export-detail>
+  </mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group>
 
