--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -33,7 +33,9 @@
       </mat-card-header>
     </mat-card>  
   </mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="New Ocean Import">
+    <app-ocean-import-detail></app-ocean-import-detail>  
+  </mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group>
 
