Updated Customs Brokerage Module

--- a/src/app/pages/customs-brokerage/customs-brokerage.component.html
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.html
@@ -6,31 +6,49 @@
       <mat-card-header>
         List of Entries
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>
     <mat-card>
       <mat-card-header>
         Entries Under Exam
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>
     <mat-card>
       <mat-card-header>
         Entries with PGA Hold
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>
     <mat-card>
       <mat-card-header>
         Entries Past Arrival Dates
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>
     <mat-card>
       <mat-card-header>
         Duty Payments Due
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>
     <mat-card>
       <mat-card-header>
         Liquidated Entries
       </mat-card-header>
+      <mat-card-content>
+        <app-entries-summary></app-entries-summary>
+      </mat-card-content>
     </mat-card>  
   </mat-tab>
   
