--- a/src/app/pages/customs-brokerage/customs-brokerage.component.html
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.html
@@ -49,11 +49,15 @@
       <mat-card-content>
         <app-entries-summary></app-entries-summary>
       </mat-card-content>
-    </mat-card>  
+    </mat-card>
   </mat-tab>
-  
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+
+  <mat-tab label="New Entry">
+    <app-entry-detail></app-entry-detail>
+  </mat-tab>
+  <mat-tab label="Charts">
+    <app-charts></app-charts>
+  </mat-tab>
 </mat-tab-group>
 
 
