--- a/src/app/widgets/charts/charts.component.html
+++ b/src/app/widgets/charts/charts.component.html
@@ -14,7 +14,11 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Line chart</h4>
-        <canvas baseChart  [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" ></canvas>
+        <canvas baseChart 
+         [datasets]="lineChartData"
+         [labels]="lineChartLabels"
+         [options]="lineChartOptions" >
+        </canvas>
       </div>
     </div>
   </div>
@@ -32,7 +36,10 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Area chart</h4>
-        <canvas baseChart  [datasets]="areaChartData" [labels]="areaChartLabels" [options]="areaChartOptions" ></canvas>
+        <canvas baseChart 
+          [datasets]="areaChartData" 
+          [labels]="areaChartLabels" 
+          [options]="areaChartOptions" ></canvas>
       </div>
     </div>
   </div>
