updated home menu

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,1 +1,102 @@
-<p>dashboard works!</p>
+<div fxLayout="row" fxLayoutAlign="space-around center">
+
+        <mat-card fxFlex="20"class='example-card'>
+            <mat-card-header>
+            Air Import
+            </mat-card-header>
+            <img mat-card-image src="https://cdn.pixabay.com/photo/2018/02/15/14/37/leaf-3155438__340.jpg" alt="Photo of a Shiba Inu">
+            <mat-card-actions>
+                <button mat-raised-button color="primary" routerLink="pages/airImport">Air Import</button>
+            </mat-card-actions>
+        </mat-card>
+
+        <mat-card fxFlex="20"class='example-card'>
+            <mat-card-header>
+            Air Export
+            </mat-card-header>
+            <img mat-card-image src="https://cdn.pixabay.com/photo/2021/04/26/20/53/ogwen-6209977__340.jpg" alt="Photo of a Shiba Inu">
+            <mat-card-actions>
+                <button mat-raised-button color="accent" routerLink="pages/airExport">Air Export</button>
+            </mat-card-actions>
+        </mat-card>
+
+        <mat-card fxFlex="20"class='example-card'>
+            <mat-card-header>
+            Ocean Import
+            </mat-card-header>
+            <img mat-card-image src="https://cdn.pixabay.com/photo/2021/10/09/05/33/cosmos-6693008__340.jpg" alt="Photo of a Shiba Inu">
+            <mat-card-actions>
+                <button mat-raised-button color="warn" routerLink="pages/oceanImport">Ocean Import</button>
+            </mat-card-actions>
+        </mat-card>
+
+        
+</div>
+
+<mat-divider></mat-divider>
+
+<div fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+        Customs Brokerage
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/11/17/04/city-6931092__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="primary" routerLink="pages/customsBrokerage">CHB</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+            Importer Security Filing
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/16/20/38/coffee-6943139__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="success" routerLink="pages/isf">ISF</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+            Air AMS
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2020/04/13/09/07/royal-mile-5037397__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="warn" routerLink="pages/airAms">Air AMS</button>
+        </mat-card-actions>
+    </mat-card>
+
+</div>
+
+<div fxLayout="row" fxLayoutAlign="space-around center">
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+        Truck AMS
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2022/01/16/13/25/cityscape-6942013__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="primary" routerLink="pages/truckAms">Truck AMS</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+        Ocean Export
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2021/10/02/07/40/ink-6674441__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="accent" routerLink="pages/oceanExport">Ocean Export</button>
+        </mat-card-actions>
+    </mat-card>
+
+    <mat-card fxFlex="20"class='example-card'>
+        <mat-card-header>
+            Sea AMS
+        </mat-card-header>
+        <img mat-card-image src="https://cdn.pixabay.com/photo/2021/12/15/20/21/sea-6873335__340.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-actions>
+            <button mat-raised-button color="warn" routerLink="pages/seaAms">Sea AMS</button>
+        </mat-card-actions>
+    </mat-card>
+
+</div>
