--- a/src/app/pages/air-ams/air-ams-summary/air-ams-summary.component.html
+++ b/src/app/pages/air-ams/air-ams-summary/air-ams-summary.component.html
@@ -68,7 +68,7 @@
         <mat-card-title>Add New</mat-card-title>
         <mat-card-content></mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color='primary'>Add New</button>
+          <button mat-raised-button color="primary">Add New</button>
         </mat-card-actions>
       </mat-card>
       <br>
@@ -77,7 +77,7 @@
         <mat-card-title>From Template</mat-card-title>
         <mat-card-content></mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color='accent'>From Template</button>
+          <button mat-raised-button color="accent">From Template</button>
         </mat-card-actions>
       </mat-card>
 
@@ -85,7 +85,7 @@
         <mat-card-title>Consolidator</mat-card-title>
         <mat-card-content></mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button color='warn'>Other Parties</button>
+          <button mat-raised-button color="warn">Other Parties</button>
         </mat-card-actions>
       </mat-card>
       <br>
