--- a/src/app/pages/customs-brokerage/customs-brokerage.component.html
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.html
@@ -2,54 +2,61 @@
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="First">
-    <mat-card>
-      <mat-card-header>
-        List of Entries
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Under Exam
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries with PGA Hold
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Past Arrival Dates
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Duty Payments Due
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Liquidated Entries
-      </mat-card-header>
-      <mat-card-content>
-        <app-entries-summary></app-entries-summary>
-      </mat-card-content>
-    </mat-card>
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          List of Entries
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          Entries Under Exam
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          Entries with PGA Hold
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+
+    </div>
+
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          Entries Past Arrival Dates
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          Duty Payments Due
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+      <mat-card fxFlex="30"class='example-card'>
+        <mat-card-header>
+          Liquidated Entries
+        </mat-card-header>
+        <mat-card-content>
+          <app-entries-summary></app-entries-summary>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </mat-tab>
 
   <mat-tab label="New Entry">
