--- a/src/app/home/dashboard/dashboard.component.scss
+++ b/src/app/home/dashboard/dashboard.component.scss
@@ -5,7 +5,7 @@ body {
 
 .example-card {
     max-width: 400px;
-    margin: 20px 20px 20px 20px;
+    margin: 10px 10px 10px 10px;
 }
 
 mat-card-header {
@@ -13,11 +13,13 @@ mat-card-header {
   font-size: 2em ;
   font-weight: bolder;
   margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 mat-card-actions {
   display:block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 50%;
 }
