--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 .sidenav-container {
   position: absolute;
-  top: 100px;
+  top: 70px;
   bottom: 60px;
   left: 0;
   right: 0;
@@ -8,14 +8,14 @@
 
 .sidenav {
   width: 200px;
-  margin-top: 100px;
+  margin-top: 70px;
   background-color: lightskyblue;
   a:hover {
     color:lime
   }
 
   a:visited {
-    color: rgba(243, 103, 10, 0.863)
+    color: rgba(34, 56, 4, 0.863)
   }
 
 }
@@ -76,11 +76,18 @@ h1 {
 }
 
 mat-sidenav-content, router-outlet, app-dashboard  {
-  height: 800px;
+  height: 900px;
   background-color: red; /* For browsers that do not support gradients */
   background-image: linear-gradient(gray, rgb(255, 255, 255));
+  margin: auto;
 }
 
 h3, mat-icon {
   margin: auto;
+}
+
+.name1 {
+  font-weight: bolder;
+  font-size: 2em;
+  color: burlywood;
 }
