--- a/src/app/pages/air-ams/air-ams.component.html
+++ b/src/app/pages/air-ams/air-ams.component.html
@@ -1,6 +1,11 @@
 <h1 style="max-width: 100%; max-height: 100%">Air AMS</h1>
 
 <mat-tab-group mat-align-tabs="start" style="color:pink;">
+
+  <mat-tab label="Air AMS Grid" >
+    <app-air-ams-grid></app-air-ams-grid>
+  </mat-tab>
+
   <mat-tab label="Air AMS Summary" >
     <app-air-ams-summary></app-air-ams-summary>
   </mat-tab>
