--- a/src/app/pages/customs-brokerage/customs-brokerage.component.scss
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.scss
@@ -1,10 +1,10 @@
 mat-card {
-    max-width: 800px;
-    max-height: 400px;
-    margin: 10px 10px 10px 10px; 
+    max-width: 600px;
+    max-height: auto;
+    margin: 10px 10px 10px 10px;
 }
 
 mat-card-header {
-    font-size: 30px;
+    font-size: 20px;
     font-family: "Times New Roman", serif ;
 }
