updated isf module

--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
+  <span>  <img src="../../../assets/images/logo.jpg" alt="ANA Link. Ltd" width="100" height="60"> </span>
   <button
     mat-icon-button
     aria-label="Toggle sidenav"
