--- a/src/app/pages/isf/isf.component.html
+++ b/src/app/pages/isf/isf.component.html
@@ -2,9 +2,10 @@
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Shipment Information">
-    <app-shipment></app-shipment>
+    <app-isf-grid></app-isf-grid>
   </mat-tab>
   <mat-tab label="Related Parties">
+    <app-shipment></app-shipment>
     <app-parties></app-parties>
   </mat-tab>
   <mat-tab label="HTS Info">
